# eubot_mcts

./: 2023-10-10-21-34-12_720045_white.json  README.md  compute.py  extract.py  play_with_human.py  play_with_server.py  record.csv
example_agent/: attacker_bot_2.py  example_bot.py  random_bot.py  trout_bot.py
my_bot/: IEUC_player.py  IEUC_strategy.py  MHSIEC_player.py  MHSIEC_strategy.py  README.md  WIEUC_player1.py  WIEUC_strategy1.py  pyproject.toml  record.csv  utilities.py
my_bot/optimization/: multiprocessing_score.py  rbc_move_score.py  stockfish_1.py
my_bot/weightedIEUC/: multiprocessing_strategies.py
my_bot/weightedIEUC/utilitie/: __init__.py  rbc_move_score.py  stockfish.py
old_reconchess/: game.py  player.py
old_reconchess/bots/: attacker_bot.py
reconchess/: game.py
reconchess/scripts/: modified_rc_connect.py  rc_connect.py  rc_playback.py
strangefish/strangefish/: example.py  multiprocessing_strategies.py  strangefish.py
strangefish/strangefish/utilities/: rbc_move_score.py
