[project]
name = "my_bot"
version = "0.1.0"
description = "my_bot with MCTS,need rewrite stockfish module"
authors = [
    {name = "zhuangms", email = "1839910275@qq.com"},
]
dependencies = [
    "requests>=2.31.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
